; ModuleID = '/home/carl/AnghaBench/linux/drivers/i2c/extr_i2c-core-acpi.c_i2c_acpi_add_device.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/i2c/extr_i2c-core-acpi.c_i2c_acpi_add_device.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i2c_adapter = type { i32 }
%struct.acpi_device = type { i32 }
%struct.i2c_board_info = type { i32 }

@AE_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i8*, i8**)* @i2c_acpi_add_device to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @i2c_acpi_add_device(i32 %0, i32 %1, i8* %2, i8** %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i8**, align 8
  %10 = alloca %struct.i2c_adapter*, align 8
  %11 = alloca %struct.acpi_device*, align 8
  %12 = alloca %struct.i2c_board_info, align 4
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i8** %3, i8*** %9, align 8
  %13 = load i8*, i8** %8, align 8
  %14 = bitcast i8* %13 to %struct.i2c_adapter*
  store %struct.i2c_adapter* %14, %struct.i2c_adapter** %10, align 8
  %15 = load i32, i32* %6, align 4
  %16 = call i64 @acpi_bus_get_device(i32 %15, %struct.acpi_device** %11)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %4
  %19 = load i32, i32* @AE_OK, align 4
  store i32 %19, i32* %5, align 4
  br label %32

20:                                               ; preds = %4
  %21 = load %struct.acpi_device*, %struct.acpi_device** %11, align 8
  %22 = load %struct.i2c_adapter*, %struct.i2c_adapter** %10, align 8
  %23 = call i64 @i2c_acpi_get_info(%struct.acpi_device* %21, %struct.i2c_board_info* %12, %struct.i2c_adapter* %22, i32* null)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %27

25:                                               ; preds = %20
  %26 = load i32, i32* @AE_OK, align 4
  store i32 %26, i32* %5, align 4
  br label %32

27:                                               ; preds = %20
  %28 = load %struct.i2c_adapter*, %struct.i2c_adapter** %10, align 8
  %29 = load %struct.acpi_device*, %struct.acpi_device** %11, align 8
  %30 = call i32 @i2c_acpi_register_device(%struct.i2c_adapter* %28, %struct.acpi_device* %29, %struct.i2c_board_info* %12)
  %31 = load i32, i32* @AE_OK, align 4
  store i32 %31, i32* %5, align 4
  br label %32

32:                                               ; preds = %27, %25, %18
  %33 = load i32, i32* %5, align 4
  ret i32 %33
}

declare dso_local i64 @acpi_bus_get_device(i32, %struct.acpi_device**) #1

declare dso_local i64 @i2c_acpi_get_info(%struct.acpi_device*, %struct.i2c_board_info*, %struct.i2c_adapter*, i32*) #1

declare dso_local i32 @i2c_acpi_register_device(%struct.i2c_adapter*, %struct.acpi_device*, %struct.i2c_board_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
